[gd_scene load_steps=6 format=3 uid="uid://btlri83f47bnt"]

[ext_resource type="Texture2D" uid="uid://ci17f6rg0gtkp" path="res://art/background2.png" id="1_16eui"]
[ext_resource type="Script" path="res://scenes/battle.gd" id="1_vko1e"]
[ext_resource type="PackedScene" uid="uid://jtxu5gt7h4sm" path="res://scenes/foe.tscn" id="3_phbsb"]
[ext_resource type="PackedScene" uid="uid://w8nw8m6f4t2h" path="res://scenes/health_bar.tscn" id="4_6jdst"]
[ext_resource type="Theme" uid="uid://bqyp1aqk6xbiy" path="res://main_theme.tres" id="5_gevwb"]

[node name="Battle" type="Node2D"]
position = Vector2(0, 3)
script = ExtResource("1_vko1e")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.471061, 0.565474, 0.387972, 1)
position = Vector2(-11, -3)
scale = Vector2(2.70048, 2.70315)
texture = ExtResource("1_16eui")
centered = false
metadata/_edit_lock_ = true

[node name="Foe" parent="." instance=ExtResource("3_phbsb")]
position = Vector2(178, 266)

[node name="BattleUI" type="CanvasLayer" parent="."]

[node name="PlayerHealthBar" parent="BattleUI" instance=ExtResource("4_6jdst")]
offset_left = 0.0
offset_top = 753.0
offset_right = 127.0
offset_bottom = 780.0
max_value = 55.0
value = 44.0

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -170.0
offset_right = 248.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
alignment = 1

[node name="PlayedCards" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = 103.0
offset_right = 248.0
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
alignment = 1

[node name="PlayCards" type="Button" parent="BattleUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -27.0
offset_right = 94.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme = ExtResource("5_gevwb")
text = "Play cards"

[node name="ShowDiscard" type="Button" parent="BattleUI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -27.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("5_gevwb")
text = "Discard"

[node name="ShowDeck" type="Button" parent="BattleUI"]
offset_top = 453.0
offset_right = 123.0
offset_bottom = 507.0
theme = ExtResource("5_gevwb")
text = "Deck"

[node name="DiscardBackground" type="ColorRect" parent="BattleUI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 27.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_gevwb")
color = Color(0.436797, 0.502154, 0.569434, 1)

[node name="Discard_label" type="Label" parent="BattleUI/DiscardBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_right = 56.0
offset_bottom = 39.0
grow_horizontal = 2
theme = ExtResource("5_gevwb")
text = "Discard"

[node name="CenterContainer" type="CenterContainer" parent="BattleUI/DiscardBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BattleUI/DiscardBackground/CenterContainer"]
custom_minimum_size = Vector2(500, 800)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="DiscardedCards" type="GridContainer" parent="BattleUI/DiscardBackground/CenterContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 4
columns = 5

[node name="ShowDiscard" type="Button" parent="BattleUI/DiscardBackground"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.5
offset_top = -54.0
offset_right = 62.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_gevwb")
text = "Close"

[node name="DeckBackground" type="ColorRect" parent="BattleUI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 27.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_gevwb")
color = Color(0.436797, 0.502154, 0.569434, 1)

[node name="Deck_label" type="Label" parent="BattleUI/DeckBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.5
offset_right = 34.5
offset_bottom = 39.0
grow_horizontal = 2
text = "Deck"

[node name="CenterContainer" type="CenterContainer" parent="BattleUI/DeckBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BattleUI/DeckBackground/CenterContainer"]
custom_minimum_size = Vector2(500, 800)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="DeckCards" type="GridContainer" parent="BattleUI/DeckBackground/CenterContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 4
columns = 5

[node name="ShowDeck" type="Button" parent="BattleUI/DeckBackground"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.5
offset_top = -54.0
offset_right = 61.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_gevwb")
text = "Close"

[connection signal="pressed" from="BattleUI/PlayCards" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BattleUI/ShowDiscard" to="." method="_on_show_discard_pressed"]
[connection signal="pressed" from="BattleUI/ShowDeck" to="." method="_on_show_deck_pressed"]
[connection signal="pressed" from="BattleUI/DiscardBackground/ShowDiscard" to="." method="_on_show_discard_pressed"]
[connection signal="pressed" from="BattleUI/DeckBackground/ShowDeck" to="." method="_on_show_deck_pressed"]
